# archive-cp

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  usage.md
script/: bootstrap  format  lint  setup  test  update
src/archive_cp/: __init__.py  __main__.py  apply.py  duplicates.py  fileutils.py  group.py  pathutils.py  prepare.py
tests/: __init__.py  test_main.py
