[project]
name = "archive-cp"
version = "1.0.0"
description = "Archive Cp"
authors = [{ name = "Christopher Larson", email = "kergoth@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["click>=8.0.1"]

[project.urls]
Homepage = "https://github.com/kergoth/archive-cp"
Repository = "https://github.com/kergoth/archive-cp"
Documentation = "https://archive-cp.readthedocs.io"
Changelog = "https://github.com/kergoth/archive-cp/releases"

[project.scripts]
archive-cp = "archive_cp.__main__:main"

[dependency-groups]
dev = [
    "Pygments>=2.10.0",
    "bandit>=1.7.4",
    "coverage[toml]>=6.2",
    "furo>=2021.11.12",
    "mypy>=0.930",
    "nox>=2024.3.2",
    "pre-commit>=2.16.0",
    "pre-commit-hooks>=4.1.0",
    "pytest>=6.2.5",
    "ruff>=0.3.0",
    "sphinx>=4.3.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-click>=3.0.2",
    "typeguard>=2.13.3",
    "xdoctest[colors]>=0.15.10",
    "myst-parser>=0.16.1",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.bandit]
# Subprocess is used with care, disable B404, B603
skips = ['B404', 'B603']

[tool.bandit.assert_used]
skips = ["*/test_*.py"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["archive_cp", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["B", "C90", "D", "E", "F", "I", "N", "UP", "W"]
ignore = ["D203", "D213", "E501"]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
